--- a/examples/ShellsortProficiency2.html
+++ b/examples/ShellsortProficiency2.html
@@ -186,8 +186,6 @@ div h1 {
     incrs[3] = 1; // Always end in 1
   }
   
-  
-
   // Process reset button: Re-initialize everything, including the increments
   function initialize() {
     generateIncrements();
@@ -203,6 +201,8 @@ div h1 {
 
     theArray = av.ds.array($theArray, {indexed: true});
     currIncrIndex = 0;
+    Tell("To start the exercise: Click on array elements to highlight those that make up the first sublist. Use increment " + incrs[currIncrIndex]);
+    av.forward();
     return theArray;
   }
 
@@ -239,26 +239,25 @@ div h1 {
   function incrementing() {
     if (currIncrIndex < 3) {
       theArray.unhighlight();
-      av.forward();
       if (mode === "SORTING") { // so student is not forced to click sorted
         av.setStepOption("grade", true);
       }
       currIncrIndex++;
       Tell("Click on array elements to highlight those that make up the first sublist. Use increment " + incrs[currIncrIndex]);
-console.log(currIncrIndex + "; " + incrs);
     } else {
       Tell("Exercise is done, check your grade.");
     }
+    av.forward();
     mode = "SELECTING";
   }
 
   // Initialize the exercise
+  // Defines the function to call on reset (initialize()), and the
+  //  function to call to generate the model answer (shellsort())
   var exer = av.exercise({reset: initialize, model: shellsort, compare: {css: "background-color"},
                           controls: $('.jsavexercisecontrols')});
   exer.reset();
   
-  Tell("Click on array elements to highlight those that make up the first sublist. Use increment " + incrs[currIncrIndex]);
-  av.forward();
   var swapIndex = null;
   // register click handlers for the array indices
   $(".jsavindex").live("click", function() {
