--- a/examples/ShellsortProficiency.html
+++ b/examples/ShellsortProficiency.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
+<!DOCTYPE html>
 <html>
 <head>
 <title>ShellSort Proficiency Exercise</title>
@@ -17,6 +17,7 @@
 
 #container .jsavarray {
    left: -10px;
+   height: 80px;
 }
 
 div h1 {
@@ -40,11 +41,7 @@ div h1 {
   <tr>
   <td width=125px>&nbsp;</td>
   <td width=550px align="center">
-    <p align="center">
-      <input type="button" name="reset" value="Reset" />
-      <input type="button" name="answer" value="Model Answer" />
-      <input type="button" name="grade" value="Grade" />
-    </p>
+    <p align="center" class="jsavexercisecontrols"></p>
   </td>
   <td width=125px align="right">
     <p align="right">
@@ -81,14 +78,16 @@ div h1 {
 </div> <!-- container -->
 
 <script
-   src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.min.js">
+   src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.3/jquery.min.js">
 </script>
+<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.13/jquery-ui.min.js"></script>
+<script src="../lib/jquery.transform.light.js"></script>
 
 <script src="../build/JSAV-min.js"></script>
 
 
 <script>
-(function($) {
+//(function($) {
   /* **************************************************************
   *  This first section is generic initialization that all AVs    *
   *  will need, including initialization for the OpenDSA library  *
@@ -99,10 +98,13 @@ div h1 {
   //containing HTML element with id ssproficiency.
   // We turn off slideshow mode, since this is a "static"
   // form-based activity
-  var av = new JSAV("ssproficiency", {'animationMode': 'none'});
+  var av = new JSAV("ssproficiency");//, {'animationMode': 'none'});
+  jQuery.fx.off = false;
+  av.recorded();
   // Set up an output message buffer object,
   // and create a convenience function named Tell
   var Tell = function(msg, color) { av.umsg(msg, {color: color}); };
+  var ArraySize = 10; // Size of the exercise array
 
   /* **************************************************************
   *        Everything below this is specific to this AV           *
@@ -112,97 +114,176 @@ div h1 {
   *  This section connects the action callbacks to the            *
   *  form entities.                                               *
   ************************************************************** */
-  $('input[name="reset"]').click(Reset);
-  $('input[name="answer"]').click(Answer);
-  $('input[name="grade"]').click(Grade);
-  $('input[name="help"]').click(Help);
-  $('input[name="about"]').click(About);
+  $('input[name="help"]').click(help);
+  $('input[name="about"]').click(about);
 
-  $('input[name="selecting"]', context).click(Selecting);
-  $('input[name="sorting"]', context).click(Sorting);
-  $('input[name="incrementing"]', context).click(Incrementing);
+  var $selecting = $('input[name="selecting"]', context).click(selecting),
+      $sorting = $('input[name="sorting"]', context).click(sorting),
+      $incrementing = $('input[name="incrementing"]', context).click(incrementing);
 
-  var incrs = []; // The array of increments
-  var $theArray = $("#profArray"),
-    initialArray = []; // needed for model answer
-  Reset();
+  var incrs = [], // The array of increments
+      $theArray = $("#profArray"),
+      initialArray = [], // needed for model answer
+      theArray,
+      mode = "SELECTING",
+      currIncrIndex; // The index for the student's current increment
+    
+    // Partial Shellsort. Sweep with the given increment
+    function sweep(incr, arr, jsav) {
+      var j = 0,
+          numElem = 0,
+          highlightFunction = function(index) { return index%incr == j;};
+      for (j=0; j<incr; j++) {         // Sort each sublist
+        // Highlight the sublist
+        numElem = Math.ceil(arr.size()/incr);
+        if(j+(incr*(numElem-1))>=arr.size()) numElem = numElem-1;
+        if (numElem == 1) {
+          return;
+        } else {
+          arr.highlight(highlightFunction);
+          jsav.step();
+          jsav.setStepOption("grade", true);
+        }
+        inssort(j, incr, arr, jsav);
+        arr.unhighlight(highlightFunction);
+        jsav.step();
+        jsav.setStepOption("grade", true);
+      }
+    }
 
+    // Insertion sort using increments
+    function inssort(start, incr, arr, jsav) {
+      var i, j;
+      for (i=start+incr; i<arr.size(); i+=incr) {
+        for (j=i; j>=incr; j-=incr) {
+          if (parseInt(arr.value(j), 10) < parseInt(arr.value(j-incr), 10)) {
+            arr.swap(j, j-incr); // swap the two indices
+            jsav.step();
+            jsav.setStepOption("grade", true);
+  	      } else {
+            break; // Done pushing element, leave for loop
+          }
+        }
+      }
+    }
+  // generates the model answer; calls sweep above
+  function shellsort(jsav) {
+    var modelarr = jsav.ds.array(initialArray, {indexed: true});
+    var i;
+    for (i=0; i<incrs.length; i+=1) {
+      if (incrs[i] < modelarr.size()) {
+        sweep(incrs[i], modelarr, jsav); // run the sweep to create the AV
+      }
+    }
+    return modelarr;
+  }
+    
   // Generate a random (but constrained) set of four increments
+  // (tuned for an array size of 10)
   function generateIncrements() {
-    incrs[0] = Math.floor(Math.random()*3) + 6; // incrs[0]: 6 to 9
+    incrs[0] = Math.floor(Math.random()*3) + 6; // incrs[0]: 6 to 8
     incrs[2] = Math.floor(Math.random()*3) + 2; // incrs[2]: 2 to 4
     // incrs[1] is something between incrs[0] and incrs[2]
     incrs[1] = Math.floor(Math.random()*(incrs[0]-incrs[2]-1)) + incrs[2] + 1;
     incrs[3] = 1; // Always end in 1
   }
-
-  // Process Reset button: Re-initialize everything, including the increments
-  function Reset() {
+  
+  // Process reset button: Re-initialize everything, including the increments
+  function initialize() {
     generateIncrements();
     document.forms['ssproficiency'].elements['incrField'].value = incrs;
   
     htmldata = "";
-    for (var i=16; i>0; i--) {
+    for (var i=ArraySize; i>0; i--) {
       var randomVal = Math.floor(Math.random()*100);
       htmldata += "<li>" + randomVal + "</li>";
-      initialArray[16-i] = randomVal;
+      initialArray[ArraySize-i] = randomVal;
     }
     $theArray.html(htmldata);
 
-    av.ds.array($theArray);
+    theArray = av.ds.array($theArray, {indexed: true});
+    currIncrIndex = 0;
+    Tell("To start the exercise: Click on array elements to highlight those that make up the first sublist. Use increment " + incrs[currIncrIndex]);
+    av.forward();
+    return theArray;
   }
 
-  // Process Answer button: Show the model answer slideshow
-  function Answer() {
-    window.open('shellsort-av.html?array=' + encodeURIComponent(initialArray.join(' ')) + 
-      '&increments=' + encodeURIComponent(incrs.join(' ')));
-  }
-
-  // Process Grade button: Show the current grade status
-  function Grade() {
-    var mystring = "Grade not yet implemented";
-    alert(mystring);
-  }
-
-  // Process Help button: Give a full help page for this activity
+  // Process help button: Give a full help page for this activity
   // We might give them another HTML page to look at.
-  function Help() {
+  function help() {
     myRef = window.open("http://algoviz.org/OpenDSA/trunk/AV/SSprofHelp.html", 'helpwindow');
   }
 
-  // Process About button: Pop up a message with an Alert
-  function About() {
+  // Process about button: Pop up a message with an Alert
+  function about() {
     var mystring = "Shellsort Proficiency Exercise\nWritten by Cliff Shaffer and Ville Karavirta\nCreated as part of the OpenDSA hypertextbook project.\nFor more information, see http://algoviz.org/eBook\nWritten during August, 2011\nLast update: August 6, 2011\nJSAV library version " + JSAV.version();
     alert(mystring);
   }
 
-  // Process Done Selecting button: change the message, array status
-  function Selecting() {
-    // TODO: Save the current list of highlighted elements to the answer state
+  // Process Done selecting button: change the message, array status
+  function selecting() {
+    mode = "SORTING";
+    av.setStepOption("grade", true);
     Tell("Click on two array elements to swap them. Swap elements in the sublist until it is sorted.");
+    av.forward();
   }
 
-  // Process Done Sorting Sublist button: change the message, array status
-  function Sorting() {
-    // TODO: Save the current array elements to the answer state
+  // Process Done sorting Sublist button: change the message, array status
+  function sorting() {
+    mode = "SELECTING";
     Tell("Click on array elements to highlight those that make up the next sublist. If you have already sorted the last sublist for this increment, then click the 'Done Increment' button. Do not bother to process sublists with only one element.");
+    theArray.unhighlight();
+    av.forward();
+    av.setStepOption("grade", true);
   }
 
   // Process Done Increment button: change the message, array status
-  function Incrementing() {
-    // TODO: Bump the current increment counter
-    // TODO: if (not last increment)
-    // TODO: Tell him what increment to use
-    Tell("Click on array elements to highlight those that make up the first sublist.");
-    // TODO: else Tell("Exercise is done, check your grade.");
+  function incrementing() {
+    if (currIncrIndex < 3) {
+      theArray.unhighlight();
+      if (mode === "SORTING") { // so student is not forced to click sorted
+        av.setStepOption("grade", true);
+      }
+      currIncrIndex++;
+      Tell("Click on array elements to highlight those that make up the first sublist. Use increment " + incrs[currIncrIndex]);
+    } else {
+      Tell("Exercise is done, check your grade.");
+    }
+    av.forward();
+    mode = "SELECTING";
   }
 
-  // TODO: Depending on how it is implemented, might want to call function
-  //       Incrementing here instead of making this "Tell"
-  // TODO: Tell him what increment to use
-  Tell("Click on array elements to highlight those that make up the first sublist.");
-
-})(jQuery);
+  // Initialize the exercise
+  // Defines the function to call on reset (initialize()), and the
+  //  function to call to generate the model answer (shellsort())
+  var exer = av.exercise({reset: initialize, model: shellsort, compare: {css: "background-color"},
+                          controls: $('.jsavexercisecontrols')});
+  exer.reset();
+  
+  var swapIndex = null;
+  // register click handlers for the array indices
+  $(".jsavindex").live("click", function() {
+    var index = $(this).parent(".jsavarray").find(".jsavindex").index(this);
+    if (mode === "SELECTING") { // in selecting mode, highlight index
+      theArray.highlight(index);
+      av.step();
+    } else if (mode === "SORTING") { // in sorting mode
+      if (!swapIndex && swapIndex !== 0) { // if first click
+        theArray.css(index, {"font-size": "130%"});
+        swapIndex = index;
+        av.forward();
+      } else { // second click will swap
+        av._redo = []; // clear the forward stack, should add a method for this in lib
+        theArray.swap(swapIndex, index, {});
+        theArray.css([swapIndex, index], {"font-size": "100%"});
+        av.forward();
+        av.setStepOption("grade", true);
+        //av.forward();
+        swapIndex = null;
+      }
+    }
+  });
+//})(jQuery);
 </script>
 </body>
 </html>
