Added support for variables with undo/redo support

--- a/test/index.html
+++ b/test/index.html
@@ -17,6 +17,7 @@
 	<script src="../src/utils.js"></script>
 	<script src="../src/graphicals.js"></script>
 	<script src="../src/datastructures.js"></script>
+	<script src="../src/code.js"></script>
 	<script src="../src/layout.js"></script>
 	<script src="../src/settings.js"></script>
 
@@ -27,6 +28,7 @@
 	<script src="unit/core.js"></script>
 	<script src="unit/array.js"></script>
 	<script src="unit/anim.js"></script>
+	<script src="unit/code.js"></script>
 </head>
 
 <body id="body">
