--- a/examples/ShellsortProficiency.html
+++ b/examples/ShellsortProficiency.html
@@ -36,7 +36,7 @@ display: block;
 margin-top: 10px;
 margin-left: 10px;
 }
-
+.jsavcontrols a {margin: 0;}
 </style>
 </head>
 
@@ -69,7 +69,7 @@ margin-left: 10px;
      increment, click "Done Increment".
   </p>
 
-  Increments to use: <input type="text" readonly="readonly" name="incrField" id="incrField" width="50">
+  Increments to use: <input type="text" readonly="readonly" name="incrField" id="incrField" width="50"> <span class="jsavcontrols"></span>
 
   <p><b>Input:</b></p>
 
@@ -134,7 +134,7 @@ margin-left: 10px;
       $theArray = $("#profArray"),
       initialArray = [], // needed for model answer
       theArray,
-      mode = "SELECTING",
+      mode,
       currIncrIndex, // The index for the student's current increment
       currSublist = 0, // the current sublist number
       currStep = 0; // for step-by-step grading
@@ -152,13 +152,13 @@ margin-left: 10px;
         return;
       } else {
         arr.highlight(highlightFunction);
+        jsav.stepOption("grade", true);
         jsav.step();
-        jsav.setStepOption("grade", true);
       }
       inssort(j, incr, arr, jsav);
       arr.unhighlight(highlightFunction);
+      jsav.stepOption("grade", true);
       jsav.step();
-      jsav.setStepOption("grade", true);
     }
   }
 
@@ -186,8 +186,8 @@ margin-left: 10px;
         sweep(incrs[i], modelarr, jsav); // run the sweep to create the AV
       }
       modelarr.unhighlight();
+      jsav.stepOption("grade", true);      
       jsav.step();
-      jsav.setStepOption("grade", true);      
     }
     return modelarr;
   }
@@ -204,7 +204,7 @@ margin-left: 10px;
   
   // Process reset button: Re-initialize everything, including the increments
   function initialize() {
-console.log("Feedback:" + feedback.val());
+    console.log("Feedback:" + feedback.val());
     generateIncrements();
     document.forms['ssproficiency'].elements['incrField'].value = incrs;
   
@@ -217,11 +217,11 @@ console.log("Feedback:" + feedback.val());
     $theArray.html(htmldata);
 
     theArray = av.ds.array($theArray, {indexed: true, layout: arrayLayout.val()});
-    currIncrIndex = 0;
-    currSublist = 0;
-    currStep = 0;
-    mode = "SELECTING",
-    Tell("To start the exercise: Click on array elements to highlight those that make up the first sublist. Use increment " + incrs[currIncrIndex]);
+    currIncrIndex = av.variable(0);
+    currSublist = av.variable(0);
+    currStep = av.variable(0);
+    mode = av.variable("SELECTING");
+    Tell("To start the exercise: Click on array elements to highlight those that make up the first sublist. Use increment " + incrs[currIncrIndex.value()]);
     av.forward();
     return theArray;
   }
@@ -240,47 +240,48 @@ console.log("Feedback:" + feedback.val());
 
   // Process Done selecting button: change the message, array status
   function selecting() {
-    mode = "SORTING";
-    av.setStepOption("grade", true);
+    mode.value("SORTING");
+    av.stepOption("grade", true);
     Tell("Click on two array elements to swap them. Swap elements in the sublist until it is sorted.");
+    currStep.value(currStep.value() + 1);
     av.forward();
-    console.log(++currStep, exer.grade().correct, (exer.grade().correct === currStep)?"CORRECT":"INCORRECT");
+    console.log(currStep.value(), exer.grade().correct, (exer.grade().correct === currStep.value())?"CORRECT":"INCORRECT");
   }
 
   // Process Done sorting Sublist button: change the message, array status
   function sorting() {
-    mode = "SELECTING";
+    mode.value("SELECTING");
     Tell("Click on array elements to highlight those that make up the next sublist. If you have already sorted the last sublist for this increment, then click the 'Done Increment' button. Do not bother to process sublists with only one element.");
     theArray.unhighlight();
-    if (currSublist > 0) {
-      theArray.toggleArrow(currSublist);
+    if (currSublist.value() > 0) {
+      theArray.toggleArrow(currSublist.value());
     }
-    theArray.toggleArrow(++currSublist);
+    theArray.toggleArrow(currSublist.value() + 1);
+    currSublist.value(currSublist.value() + 1);
     
+    currStep.value(currStep.value() + 1);
+    av.stepOption("grade", true);
     av.forward();
-    av.setStepOption("grade", true);
-    console.log(++currStep, exer.grade().correct, (exer.grade().correct === currStep)?"CORRECT":"INCORRECT");
+    console.log(currStep.value(), exer.grade().correct, (exer.grade().correct === currStep.value())?"CORRECT":"INCORRECT");
   }
 
   // Process Done Increment button: change the message, array status
   function incrementing() {
-    if (currIncrIndex < 3) {
+    if (currIncrIndex.value() < 3) {
       theArray.unhighlight();
-      /*if (mode === "SORTING") { // so student is not forced to click sorted
-        av.setStepOption("grade", true);
-      }*/
-      currIncrIndex++;
-      theArray.toggleArrow(currSublist);
-      currSublist = 0;
+      currIncrIndex.value(currIncrIndex.value() + 1);
+      theArray.toggleArrow(currSublist.value());
+      currSublist.value(0);
       
-      Tell("Click on array elements to highlight those that make up the first sublist. Use increment " + incrs[currIncrIndex]);
+      Tell("Click on array elements to highlight those that make up the first sublist. Use increment " + incrs[currIncrIndex.value()]);
     } else {
       Tell("Exercise is done, check your grade.");
     }
+    currStep.value(currStep.value() + 1);
+    av.stepOption("grade", true);
     av.forward();
-    av.setStepOption("grade", true);
-    console.log(++currStep, exer.grade().correct, (exer.grade().correct === currStep)?"CORRECT":"INCORRECT");
-    mode = "SELECTING";
+    console.log(currStep.value(), exer.grade().correct, (exer.grade().correct === currStep.value())?"CORRECT":"INCORRECT");
+    mode.value("SELECTING");
   }
 
   // Initialize the exercise
@@ -299,20 +300,20 @@ console.log("Feedback:" + feedback.val());
   // register click handlers for the array indices
   $("#profArray .jsavindex").live("click", function() {
     var index = $(this).parent(".jsavarray").find(".jsavindex").index(this);
-    if (mode === "SELECTING") { // in selecting mode, highlight index
+    av._redo = []; // clear the forward stack, should add a method for this in lib
+    if (mode.value() === "SELECTING") { // in selecting mode, highlight index
       if (theArray.css(index, "background-color") === BGCOLORS[arrayLayout.val()]) {
         theArray.highlight(index);
       } else {
         theArray.unhighlight(index);
       }
       av.step();
-    } else if (mode === "SORTING") { // in sorting mode
+    } else if (mode.value() === "SORTING") { // in sorting mode
       if (!swapIndex && swapIndex !== 0) { // if first click
         theArray.css(index, {"font-size": "130%"});
         swapIndex = index;
         av.forward();
       } else { // second click will swap
-        av._redo = []; // clear the forward stack, should add a method for this in lib
         theArray.swap(swapIndex, index, {});
         theArray.css([swapIndex, index], {"font-size": "100%"});
         av.forward();
