Changed style of controls

--- a/examples/ShellsortProficiency.html
+++ b/examples/ShellsortProficiency.html
@@ -36,7 +36,10 @@ display: block;
 margin-top: 10px;
 margin-left: 10px;
 }
-.jsavcontrols a {margin: 0;}
+.jsavcontrols a {
+  margin: 0 5px; 
+  height: 20px;
+}
 </style>
 </head>
 
