Trivial changes in content wording.

--- a/examples/ShellsortAlt.html
+++ b/examples/ShellsortAlt.html
@@ -75,7 +75,7 @@ Another group of sublists is then chosen and sorted, and so on.
 </p>
 
 <p>
-Shellsort provides a huge improvement over O(n<sup>2</sup>) sorts
+Shellsort provides a huge improvement over O(<i>n</i><sup>2</sup>)
 sorts like Insertion Sort.
 It works by taking advantage of the fact that Insertion Sort works
 very well (in linear time) when the list is nearly sorted.
